<resources>
    <string name="app_name">TestAppForCourses</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="user_name">User Name</string>
    <string name="user_email">user@example.com</string>
    <string name="user_phone">123456789</string>
    <string name="user_city">Minks</string>
    <string name="user_details">User Details</string>
    <string name="user_name_text">Name:</string>
    <string name="user_email_text">Email:</string>
    <string name="user_phone_text">Phone:</string>
    <string name="user_city_text">City:</string>
</resources>